syntax = "proto3";

package proto_svg;

message Rgb {
    uint32 red = 1;
    uint32 green = 2;
    uint32 blue = 3;
}

message Rgba {
    uint32 red = 1;
    uint32 green = 2;
    uint32 blue = 3;
    double opacity = 4;
}

message Color {
    oneof value {
        string name = 1;
        Rgba rgba = 2;
        Rgb rgb = 3;
    }
}

